<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Location"
                android:textColor="#FFF"
                android:textSize="25sp">
            </TextView>
            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_at"
                android:textColor="#FFF"
                android:textSize="15sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/clear_sky"
                android:textColor="#FFF"
                android:textSize="18sp">
            </TextView>
            <TextView
                android:id="@+id/temp"
                android:text="@string/_24_c"
                android:textSize="90sp"
                android:textColor="#FFF"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/temp_min"
                    android:text="@string/min_temp"
                    android:textColor="#FFF"
                    android:textSize="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <Space
                    android:layout_width = "50dp"
                    android:layout_height = "wrap_content">
                </Space>
                <TextView
                    android:id="@+id/temp_max"
                    android:text="@string/max_temp"
                    android:textColor="#FFF"
                    android:textSize="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/detailsContainer"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        app:tint="#FFF">
                    </ImageView>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>
                    <TextView
                        android:text="@string/sunrise"
                        android:textSize="15sp"
                        android:textColor="#FFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:id="@+id/sunrise"
                        android:text="@string/_5_30am"
                        android:textSize="15sp"
                        android:textColor="#FFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">
                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        app:tint="#FFF">
                    </ImageView>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>
                    <TextView
                        android:text="@string/sunset"
                        android:textSize="15sp"
                        android:textColor="#FFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:id="@+id/sunset"
                        android:text="@string/_5_30pm"
                        android:textSize="15sp"
                        android:textColor="#FFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">
                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        app:tint="#FFF">
                    </ImageView>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>
                    <TextView
                        android:text="@string/wind"
                        android:textSize="15sp"
                        android:textColor="#FFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:id="@+id/wind"
                        android:text="@string/_5bars"
                        android:textSize="15sp"
                        android:textColor="#FFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">
                </Space>
            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp">
            </Space>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        app:tint="#FFF">
                    </ImageView>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>
                    <TextView
                        android:text="@string/pressure"
                        android:textSize="15sp"
                        android:textColor="#FFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:id="@+id/pressure"
                        android:text="@string/_10atm"
                        android:textSize="15sp"
                        android:textColor="#FFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">
                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        app:tint="#FFF">
                    </ImageView>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>
                    <TextView
                        android:text="@string/humidity"
                        android:textSize="15sp"
                        android:textColor="#FFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:id="@+id/humidity"
                        android:text="@string/_70"
                        android:textSize="15sp"
                        android:textColor="#FFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">
                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        app:tint="#FFF">
                    </ImageView>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>
                    <TextView
                        android:text="@string/created_by"
                        android:textSize="15sp"
                        android:textColor="#FFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:id="@+id/info"
                        android:text="@string/kuldip"
                        android:textSize="15sp"
                        android:textColor="#FFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">
                </Space>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ProgressBar>
    <TextView
        android:id="@+id/errortext"
        android:layout_centerInParent="true"
        android:text="@string/something_went_wrong"
        android:textColor="#FFF"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

</RelativeLayout>